Modify syntax to work with Java 8